erDiagram
    USERS {
        bigint id PK
        varchar email UK
        varchar password
        varchar first_name
        varchar last_name
        varchar address
        enum role
    }

    REFRESH_TOKENS {
        bigint id PK
        bigint user_id FK
        varchar token_id UK
        varchar token_hash
        timestamp expiry_date
        boolean is_revoked
    }

    CATEGORY_ENTITY {
        bigint id PK
        varchar name UK
        varchar description
    }

    PRODUCTS {
        bigint id PK
        bigint category_id FK
        varchar category
        varchar name UK
        text description
        varchar origin
        varchar season
        json flavor_profile
        decimal price
        int stock_quantity
        bigint version
        varchar image_url
        timestamp created_at
    }

    PRODUCT_TASTING_NOTES {
        bigint product_id FK
        int note_order
        varchar note
    }

    PRODUCT_BEST_FOR {
        bigint product_id FK
        int use_case_order
        varchar use_case
    }

    ORDERS {
        bigint id PK
        bigint user_id FK
        enum status
        timestamp order_date
        double total_amount
    }

    ORDER_ITEM {
        bigint id PK
        bigint order_id FK
        bigint product_id FK
        int quantity
        double unit_price
    }

    USERS ||--o{ ORDERS : places
    USERS ||--o{ REFRESH_TOKENS : has
    CATEGORY_ENTITY ||--o{ PRODUCTS : contains
    ORDERS ||--|{ ORDER_ITEM : includes
    PRODUCTS ||--o{ ORDER_ITEM : referenced_in
    PRODUCTS ||--|{ PRODUCT_TASTING_NOTES : has
    PRODUCTS ||--|{ PRODUCT_BEST_FOR : has
